# Copyright 2017 The Australian National University
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "mu"
version = "0.0.1"
authors = [ "Your name <you@example.com>" ]
build = "build.rs"

[lib]
crate-type = ["staticlib", "rlib", "dylib"]
doctest = false

[features]
default = ["aot"]
aot = []
jit = []
sel4-rumprun = []
sel4-rumprun-target-side = []

[build-dependencies]
gcc = "*"
#built = "0.1"

[dependencies]
mu_ast = {path = "src/ast"}
mu_utils = {path = "src/utils"}
#mu_gc = {path = "src/gc"}
rodal = { git = "https://gitlab.anu.edu.au/mu/rodal", branch = "new", version = "^0.1.13" }
#rodal = { path = "./rodal", version = "*" }

libc="*"
field-offset = "*"
libloading = "*"
lazy_static = "*"
log = "*"
stderrlog = "*"
num = "*"
hprof = "*"
memmap = "*"
memsec = "0.1.9"
serde = "*"
serde_derive = "*"
time = "*"
maplit = "*"
docopt = "*"
petgraph = "*"
extprim = "*"
num-traits = "*"
#built = "0.1"

[target.aarch64-unknown-linux-gnu.dependencies]
mu_gc = { path = "src/gc"}
built = "0.1"

[target.x86_64-unknown-linux-gnu.dependencies]
mu_gc = { path = "src/gc"}
built = "0.1"

[target.x86_64-apple-darwin.dependencies]
mu_gc = { path = "src/gc"}
built = "0.1"

[target.x86_64-rumprun-netbsd.dependencies]
mu_gc = { path = "src/gc", features = ["sel4-rumprun-target-side"], target = "x86_64-rumprun-netbsd"}

[target.aarch64-unknown-linux-gnu.build-dependencies]
built = "0.1"

[target.x86_64-unknown-linux-gnu.build-dependencies]
built = "0.1"

[target.x86_64-apple-darwin.build-dependencies]
built = "0.1"
