# Copyright 2017 The Australian National University
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "gc"
version = "0.0.1"
authors = ["qinsoon <qinsoon@gmail.com>"]
build = "build.rs"

[lib]
crate-type = ["rlib"]

[features]
default = []
use-sidemap = []
sel4-rumprun = []
sel4-rumprun-target-side = []

[build-dependencies]
gcc = "0.3"

[dependencies]
utils = {path = "../utils"}

time = "0.1.34"
lazy_static = "0.1.15"
log = "0.3.5"
simple_logger = "0.4.0"
aligned_alloc = "0.1.2"
crossbeam = "0.2.8"
rustc-serialize = "*"
field-offset = "0.1.1"